updated packages, added storybook theming

--- a/package.json
+++ b/package.json
@@ -24,37 +24,37 @@
     "build-storybook": "yarn run build && build-storybook -c .storybook -o storybook"
   },
   "dependencies": {
-    "gatsby": "^2.0.19",
-    "gatsby-image": "^2.0.15",
+    "gatsby": "^2.15.4",
+    "gatsby-image": "^2.2.18",
     "gatsby-plugin-favicon": "^3.1.4",
-    "gatsby-plugin-offline": "^2.0.5",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.0.7",
-    "gatsby-plugin-styled-components": "^3.0.1",
-    "gatsby-source-filesystem": "^2.0.4",
-    "gatsby-transformer-sharp": "^2.1.4",
-    "lodash": "^4.17.15",
+    "gatsby-plugin-offline": "^3.0.6",
+    "gatsby-plugin-react-helmet": "^3.1.7",
+    "gatsby-plugin-sharp": "^2.2.21",
+    "gatsby-plugin-styled-components": "^3.1.5",
+    "gatsby-source-filesystem": "^2.1.22",
+    "gatsby-transformer-sharp": "^2.2.14",
     "polished": "^3.4.1",
-    "prop-types": "^15.6.2",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
-    "react-helmet": "^5.2.0",
-    "styled-components": "^4.0.3",
-    "styled-reset-advanced": "^1.0.0",
-    "styled-system": "^5.1.0"
+    "prop-types": "^15.7.2",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-helmet": "^5.2.1",
+    "styled-components": "^4.3.2",
+    "styled-reset-advanced": "^1.0.1",
+    "styled-system": "^5.1.2"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^4.0.2",
-    "@storybook/addon-knobs": "^4.0.2",
-    "@storybook/addon-links": "^4.0.2",
-    "@storybook/addon-notes": "^4.0.2",
-    "@storybook/addons": "^4.0.2",
-    "@storybook/react": "^4.0.2",
-    "babel-plugin-styled-components": "^1.8.0",
-    "eslint": "^5.8.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1"
+    "@storybook/addon-actions": "^5.1.11",
+    "@storybook/addon-knobs": "^5.1.11",
+    "@storybook/addon-links": "^5.1.11",
+    "@storybook/addon-notes": "^5.1.11",
+    "@storybook/addons": "^5.1.11",
+    "@storybook/react": "^5.1.11",
+    "@storybook/theming": "^5.1.11",
+    "babel-plugin-styled-components": "^1.10.0",
+    "eslint": "^6.3.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3"
   }
 }
