--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -46,5 +46,5 @@ rules:
   jsx-a11y/anchor-is-valid: 0
   class-methods-use-this: 0
   object-curly-newline: 0
-  semi: [warn, never]
-  quotes: [warn, single]
+  semi: [error, never]
+  quotes: [error, single]
