--- a/package.json
+++ b/package.json
@@ -49,12 +49,18 @@
     "@storybook/addon-notes": "^5.1.11",
     "@storybook/addons": "^5.1.11",
     "@storybook/react": "^5.1.11",
+    "@types/react": "^16.9.4",
+    "@types/styled-components": "^4.1.19",
+    "@types/styled-system": "^5.1.2",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-plugin-styled-components": "^1.10.0",
     "eslint": "^6.3.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.7.0"
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "gatsby-plugin-typescript": "^2.1.11",
+    "react-docgen-typescript-loader": "^3.3.0"
   }
 }
