--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,11 @@
     "target": "es5",
     "lib": ["es5", "es6", "es7", "es2017", "dom"],
     "sourceMap": true,
-    "allowJs": false,
+    "allowJs": true,
     "jsx": "react",
     "moduleResolution": "node",
     "rootDirs": ["./src", "./.storybook"],
     "baseUrl": "src",
-    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
@@ -19,16 +18,9 @@
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
     "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "skipLibCheck": true,
+    "esModuleInterop": true
   },
   "include": ["src/**/*.stories.tsx"],
-  "exclude": [
-    "build",
-    "scripts",
-    "public",
-    ".storybook",
-    ".cache",
-    "node_modules"
-  ]
+  "exclude": ["build", "scripts", "public", ".storybook", ".cache", "node_modules"]
 }
