--- a/package.json
+++ b/package.json
@@ -36,18 +36,19 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
-    "styled-components": "^4.4.0",
+    "styled-components": "^5.0.1",
     "styled-reset-advanced": "^1.0.1",
     "styled-system": "^5.1.2",
     "tslint": "^5.20.1"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^5.1.11",
-    "@storybook/addon-knobs": "^5.1.11",
-    "@storybook/addon-links": "^5.1.11",
-    "@storybook/addon-notes": "^5.1.11",
-    "@storybook/addons": "^5.1.11",
-    "@storybook/react": "^5.1.11",
+    "@storybook/addon-actions": "^5.3.13",
+    "@storybook/addon-knobs": "^5.3.13",
+    "@storybook/addon-links": "^5.3.13",
+    "@storybook/addon-notes": "^5.3.13",
+    "@storybook/addon-viewport": "^5.3.13",
+    "@storybook/addons": "^5.3.13",
+    "@storybook/react": "^5.3.13",
     "@types/react": "^16.9.4",
     "@types/react-helmet": "^5.0.11",
     "@types/storybook__addon-knobs": "^5.0.4",
